--- a/module/component/control/button/_app.scss
+++ b/module/component/control/button/_app.scss
@@ -46,8 +46,8 @@
 
     height: 100% !important;
     min-height: 100% !important;
-    width: var(--zehn-size-icon-md) !important;
-    min-width: var(--zehn-size-icon-md) !important;
+    width: $icon-size !important;
+    min-width: $icon-size !important;
 
     inset: unset !important;
     margin: 0 !important;
