--- a/module/component/control/button/_dialog.scss
+++ b/module/component/control/button/_dialog.scss
@@ -39,10 +39,10 @@
     filter: none !important;
     opacity: 1 !important;
 
-    width: var(--zehn-size-icon-md) !important;
-    min-height: var(--zehn-size-icon-md) !important;
-    height: var(--zehn-size-icon-md) !important;
-    min-width: var(--zehn-size-icon-md) !important;
+    width: $icon-size !important;
+    min-height: $icon-size !important;
+    height: $icon-size !important;
+    min-width: $icon-size !important;
 
     inset: unset !important;
     margin: auto 0 !important;
