--- a/module/legacy/_popup.scss
+++ b/module/legacy/_popup.scss
@@ -91,7 +91,8 @@
 /* BBCODE */
 ._1ILFQY2sxyGFT_n-fifayy {
   background: var(--zehn-color-base) !important;
-  padding: calc(32px + 16px) 16px 16px 16px !important;
+  padding: var(--zehn-size-dialog-padding) !important;
+  padding-top: calc(var(--zehn-size-titlebar) + var(--zehn-size-dialog-padding)) !important;
 }
 
 /* DIALOG */
@@ -106,7 +107,8 @@
 }
 
 ._1Lfu7heMNRsXXo1Yfzsp17 {
-  padding-top: 32px !important;
+  padding-top: var(--zehn-size-titlebar) !important;
+  background: transparent !important;
 }
 
 ._27qasW5wLU4h4nUgawpo1q ._1Lfu7heMNRsXXo1Yfzsp17 {
